--- a/index.html
+++ b/index.html
@@ -1277,7 +1277,7 @@ function exportPrint(){
 function analyticsKPIs(){
   const facts=load(K.FACTS,[]);
   const citas=load(K.CITAS,[]);
-  const hoy=todayISO(); const d=new Date(); const ym=hoy.slice(0,7);
+  const hoy=todayISO(); const ym=hoy.slice(0,7);
   const suma = arr => arr.reduce((a,b)=>a+b,0);
   const ingresosHoy = suma(facts.filter(f=>f.fecha===hoy).map(f=>f.tot));
   const ingresosMes = suma(facts.filter(f=>f.fecha.startsWith(ym)).map(f=>f.tot));
@@ -1301,10 +1301,8 @@ function analyticsChart30(){
   const W=cvs.width = cvs.clientWidth || 800, H=cvs.height;
   ctx.clearRect(0,0,W,H);
   const pad=30; const max=Math.max(1,...days.map(x=>x.total));
-  // ejes
   ctx.strokeStyle='#cdd4ff'; ctx.lineWidth=1;
   ctx.beginPath(); ctx.moveTo(pad,10); ctx.lineTo(pad,H-pad); ctx.lineTo(W-10,H-pad); ctx.stroke();
-  // ticks y labels Y
   ctx.fillStyle='#9aa3c7'; ctx.font='12px sans-serif';
   for(let i=0;i<=4;i++){
     const val=max*i/4; const y=H-pad-(H-2*pad)*(val/max);
@@ -1312,8 +1310,7 @@ function analyticsChart30(){
     ctx.strokeStyle='rgba(205,212,255,.15)';
     ctx.beginPath(); ctx.moveTo(pad,y); ctx.lineTo(W-10,y); ctx.stroke();
   }
-  // línea
-  const dx=(W-2*pad)/ (days.length-1);
+  const dx=(W-2*pad)/(days.length-1);
   ctx.beginPath();
   days.forEach((p,idx)=>{
     const x=pad+dx*idx;
@@ -1321,183 +1318,6 @@ function analyticsChart30(){
     if(idx===0) ctx.moveTo(x,y); else ctx.lineTo(x,y);
   });
   ctx.strokeStyle='#93c5fd'; ctx.lineWidth=2; ctx.stroke();
-}
-
-/* ============================================================
-   SERVICIOS (para facturación rápida)
-   ============================================================ */
-function renderServicios(){
-  const tb=byId('tblServicios').querySelector('tbody');
-  const sv=load(K.SVC,[]);
-  tb.innerHTML = sv.map(s=>`
-    <tr class="tr">
-      <td>${s.nombre}</td>
-      <td>${fmtMoney(s.precio)}</td>
-      <td class="no-print">
-        <button class="btn-ghost" onclick="svUse('${s.id}')">Usar en factura</button>
-        <button class="btn-ghost" onclick="svEdit('${s.id}')">Editar</button>
-        <button class="btn-danger" onclick="svDel('${s.id}')">Borrar</button>
-      </td>
-    </tr>`).join('');
-}
-function svAdd(){
-  const nombre=byId('sv_nombre').value.trim();
-  const precio=+byId('sv_precio').value||0;
-  if(!nombre) return alert('Nombre requerido');
-  const sv=load(K.SVC,[]); sv.push({id:uuid(), nombre, precio}); save(K.SVC,sv);
-  byId('sv_nombre').value=''; byId('sv_precio').value='';
-  renderServicios();
-}
-function svUse(id){
-  const s=load(K.SVC,[]).find(x=>x.id===id); if(!s) return;
-  lineaAdd({desc:s.nombre, cant:1, precio:s.precio});
-}
-function svEdit(id){
-  const s=load(K.SVC,[]).find(x=>x.id===id); if(!s) return;
-  byId('sv_nombre').value=s.nombre; byId('sv_precio').value=s.precio;
-  byId('btnSvAgregar').dataset.id=id;
-}
-function svDel(id){
-  save(K.SVC, load(K.SVC,[]).filter(x=>x.id!==id)); renderServicios();
-}
-
-/* ============================================================
-   CONFIG: cargar/guardar + export/import
-   ============================================================ */
-function cfgLoadInputs(){
-  const c=load(K.CFG,{});
-  byId('cfg_name').value=c.name||'';
-  byId('cfg_sub').value=c.sub||'';
-  byId('cfg_bg_op').value=c.bgOpacity??1;
-  byId('cfg_primary').value=c.primary||'#6ee7b7';
-  byId('cfg_accent').value=c.accent||'#93c5fd';
-  byId('cfg_form_url').value=c.formUrl||'';
-  byId('cfg_script_url').value=c.scriptUrl||'';
-  byId('cfg_wa_phone').value=c.waPhone||'';
-  byId('cfg_wa_fact').value=c.waFacto||'';
-  byId('cfg_maps').value=c.maps||'';
-  if(c.logo) byId('cfg_logo_prev').src=c.logo;
-}
-function cfgSave(partial){
-  const c={...load(K.CFG,{}), ...partial};
-  save(K.CFG,c); applyBrand();
-}
-function fileToDataURL(file){
-  return new Promise(res=>{
-    const r=new FileReader(); r.onload=()=>res(r.result); r.readAsDataURL(file);
-  });
-}
-async function onLogoChange(e){
-  const f=e.target.files?.[0]; if(!f) return;
-  const data=await fileToDataURL(f);
-  byId('cfg_logo_prev').src=data;
-  cfgSave({logo:data});
-}
-async function onBgChange(e){
-  const f=e.target.files?.[0]; if(!f) return;
-  const data=await fileToDataURL(f);
-  cfgSave({bg:data});
-}
-function exportConfig(){
-  const dump={
-    config:load(K.CFG,{}),
-    empleados:load(K.EMP,[]),
-    servicios:load(K.SVC,[]),
-    citas:load(K.CITAS,[]),
-    facturas:load(K.FACTS,[]),
-    users:load(K.USERS,[])
-  };
-  download(`salonpro_config_${Date.now()}.json`, JSON.stringify(dump,null,2),'application/json');
-}
-function importConfig(file){
-  const r=new FileReader();
-  r.onload=()=>{
-    try{
-      const j=JSON.parse(r.result);
-      if(j.config) save(K.CFG,j.config);
-      if(j.empleados) save(K.EMP,j.empleados);
-      if(j.servicios) save(K.SVC,j.servicios);
-      if(j.citas) save(K.CITAS,j.citas);
-      if(j.facturas) save(K.FACTS,j.facturas);
-      if(j.users) save(K.USERS,j.users);
-      applyBrand(); renderEmpleadosSelects(); renderEmpleadosTabla(); renderServicios(); renderCitas(); renderFacturas();
-      alert('Configuración importada.');
-    }catch(e){ alert('Archivo inválido.'); }
-  };
-  r.readAsText(file);
-}
-
-/* ============================================================
-   EVENTOS UI
-   ============================================================ */
-function bindUI(){
-  // navegación
-  byId('btnHome').onclick = ()=>show('screen-home');
-  byId('btnConfig').onclick=()=>show('screen-config');
-  byId('btnLogout').onclick=()=>{logout();};
-  $$('[data-goto]').forEach(b=> b.onclick=()=> show(b.dataset.goto));
-  // login
-  byId('doLogin').onclick=()=>{
-    const ok = login(byId('loginUser').value.trim(), byId('loginPass').value.trim());
-    if(!ok) return alert('Credenciales inválidas');
-    show('screen-home');
-  };
-  // empleados
-  byId('btnEmpGuardar').onclick=empSave;
-  byId('btnEmpLimpiar').onclick=()=>{ byId('e_nombre').value=''; byId('e_tel').value=''; byId('e_activo').value='1'; delete byId('btnEmpGuardar').dataset.id; };
-  // agenda
-  byId('btnAgendaGuardar').onclick=citaGuardar;
-  byId('btnAgendaNoShow').onclick=citaNoShow;
-  byId('btnAgendaFiltrar').onclick=()=>renderCitas(true);
-  byId('btnAgendaWhatsApp').onclick=()=>{ // usa los campos actuales como draft
-    const temp={id:'temp', nombre:byId('a_nombre').value, tel:byId('a_tel').value, emp:byId('a_emp').value, srv:byId('a_srv').value, fecha:byId('a_fecha').value, hora:byId('a_hora').value, notas:byId('a_notas').value};
-    load(K.CITAS,[]).push(temp); save(K.CITAS,load(K.CITAS,[])); citaWhatsApp('temp');
-    // limpiar temp
-    save(K.CITAS, load(K.CITAS,[]).filter(x=>x.id!=='temp'));
-  };
-  byId('btnAgendaGoogle').onclick=citaGoogle;
-  byId('btnAgendaImprimir').onclick=()=>window.print();
-  // facturación
-  byId('btnAddLinea').onclick=()=>lineaAdd();
-  byId('btnLoadServicios').onclick=()=>renderServicios();
-  byId('f_ivu').addEventListener('input', recalcFactura);
-  byId('btnFacturaGuardar').onclick=facturaGuardar;
-  byId('btnFacturaExportCSV').onclick=()=>{ const n=byId('f_num').value; if(!n) return alert('Guarda primero.'); factCSV(n); };
-  byId('btnFacturaExportPDF').onclick=()=>{ const n=byId('f_num').value; if(!n) return alert('Guarda primero.'); factImprimir(n); };
-  byId('btnFacturaWhatsApp').onclick=()=>{ const n=byId('f_num').value; if(!n) return alert('Guarda primero.'); factWA(n); };
-  byId('btnHistFiltrar').onclick=renderFacturas;
-  // export
-  byId('ex_periodo').onchange=()=>{
-    const isR=byId('ex_periodo').value==='rango';
-    byId('ex_rango_wrap').style.display=isR?'grid':'none';
-  };
-  byId('btnExportCSV').onclick=exportCSV;
-  byId('btnExportPrint').onclick=exportPrint;
-  // servicios
-  byId('btnSvAgregar').onclick=()=>{
-    const id=byId('btnSvAgregar').dataset.id;
-    if(id){
-      const sv=load(K.SVC,[]).map(s=> s.id===id ? {...s, nombre:byId('sv_nombre').value.trim(), precio:+byId('sv_precio').value||0} : s);
-      save(K.SVC,sv); delete byId('btnSvAgregar').dataset.id;
-      byId('sv_nombre').value=''; byId('sv_precio').value='';
-      renderServicios();
-    }else svAdd();
-  };
-  // config
-  byId('cfg_logo').onchange = onLogoChange;
-  byId('cfg_bg').onchange   = onBgChange;
-  byId('cfg_name').oninput  = e=>cfgSave({name:e.target.value});
-  byId('cfg_sub').oninput   = e=>cfgSave({sub:e.target.value});
-  byId('cfg_bg_op').oninput = e=>cfgSave({bgOpacity:+e.target.value});
-  byId('cfg_primary').oninput = e=>cfgSave({primary:e.target.value});
-  byId('cfg_accent').oninput  = e=>cfgSave({accent:e.target.value});
-  byId('cfg_form_url').oninput= e=>cfgSave({formUrl:e.target.value});
-  byId('cfg_script_url').oninput= e=>cfgSave({scriptUrl:e.target.value});
-  byId('cfg_wa_phone').oninput= e=>cfgSave({waPhone:e.target.value});
-  byId('cfg_wa_fact').oninput = e=>cfgSave({waFacto:e.target.value});
-  byId('cfg_maps').oninput    = e=>cfgSave({maps:e.target.value});
-  byId('btnExportConfig').onclick=exportConfig;
-  byId('cfgImport').onchange = e=>e.target.files[0] && importConfig(e.target.files[0]);
 }
 
 /* ============================================================
@@ -1509,23 +1329,76 @@ function boot(){
   renderEmpleadosTabla();
   renderEmpleadosSelects();
   renderServicios();
-  // preset agenda/filters
   byId('a_fecha').value = todayISO();
   byId('f_fecha').value = todayISO();
   renderCitas();
   renderFacturas();
-  // nueva factura en blanco
   facturaNueva();
-  // sesión
   const ses=load(K.SESSION,null);
   if(ses){ byId('whoami').title=`${ses.user} (${ses.role})`; show('screen-home'); }
   else show('screen-login');
-  // analytics
   analyticsKPIs(); analyticsChart30();
-  // eventos
   bindUI();
 }
 window.addEventListener('DOMContentLoaded', boot);
+
+/* ============================================================
+   GOOGLE FORM PATCH (usa tus entry.xxxxx reales)
+   ============================================================ */
+function ensureDefaults_patchFormIDs(){
+  const cfg = load(K.CFG, {}) || {};
+  cfg.formUrl = cfg.formUrl || "https://docs.google.com/forms/d/e/1FAIpQLSf1UXh09WVyDvNF0tvzPEUQGsArmm81Ice53xoWgzpY-8Ae8g/formResponse";
+  cfg.formMap = cfg.formMap || {
+    nombre:   "entry.126099183",
+    tel:      "entry.885012759",
+    fecha:    "entry.2059036119",
+    hora:     "entry.805023101",
+    servicio: "entry.1764664020",
+    tecnica:  "entry.1003942216",
+    correo:   "entry.1481210954"
+  };
+  save(K.CFG, cfg);
+}
+function toMMDDYY(iso){
+  if(!iso || !/^\d{4}-\d{2}-\d{2}$/.test(iso)) return iso;
+  const [y,m,d] = iso.split('-');
+  return `${m}/${d}/${y.slice(2)}`;
+}
+async function citaGoogle(){
+  const cfg=load(K.CFG,{});
+  if(!cfg.formUrl){ alert('Configura la URL de formResponse.'); return; }
+  const m=cfg.formMap||{};
+  const nombre=byId('a_nombre').value.trim();
+  const tel=byId('a_tel').value.trim();
+  const emp=byId('a_emp').value;
+  const srv=byId('a_srv').value.trim();
+  const fechaISO=byId('a_fecha').value;
+  const hora24=byId('a_hora').value;
+  if(!nombre||!tel||!emp||!fechaISO||!hora24){ alert('Completa los campos.'); return; }
+  const emps=load(K.EMP,[]); 
+  const empName=(emps.find(e=>e.id===emp)||{}).nombre||'';
+  const fechaForm = toMMDDYY(fechaISO);
+  const horaForm  = hora24;
+  const payload = new URLSearchParams({
+    [m.nombre]:   nombre,
+    [m.tel]:      tel,
+    [m.fecha]:    fechaForm,
+    [m.hora]:     horaForm,
+    [m.servicio]: srv,
+    [m.tecnica]:  empName,
+    [m.correo]:   ""
+  });
+  try{
+    await fetch(cfg.formUrl,{method:'POST', body:payload, mode:'no-cors'});
+    alert('Cita enviada a Google Form.');
+  }catch(e){ console.error(e); alert('Error enviando al Form.'); }
+}
+const __boot__orig = boot;
+window.boot = function(){
+  ensureDefaults();
+  ensureDefaults_patchFormIDs();
+  __boot__orig();
+};
 </script>
 </body>
 </html>
