--- a/index.html
+++ b/index.html
@@ -1368,7 +1368,7 @@ function ensureDefaults_patchFormIDs(){
   cfg.formMap = cfg.formMap || {
     nombre:   "entry.126099183",
     tel:      "entry.885012759",
-    fecha:    "entry.2059036119", // mm/dd/yy
+    fecha:    "entry.2059036119", // mm/dd/yyyy
     hora:     "entry.805023101",  // HH:MM (24h)
     servicio: "entry.1764664020",
     tecnica:  "entry.1003942216",
